--- a/public/css/akup.css
+++ b/public/css/akup.css
@@ -2,6 +2,7 @@
     --akup-red: #A10D17;
     --akup-yellow: #EDB903;
     --akup-light: #FDFFFC;
+    --akup-dark: #011627;
 }
 
 body {
@@ -9,7 +10,7 @@ body {
     color: var(--akup-light);
 }
 
-#welcome hr {
+hr {
     border-color: var(--akup-light);
 }
 
@@ -18,6 +19,8 @@ body {
 }
 
 .navbar {
+    min-height: 4rem;
+    z-index: 100;
     background-color: var(--akup-yellow);
 }
 
@@ -26,16 +29,23 @@ body {
     top: 0;
     bottom: 0;
     left: 0;
-    z-index: -99; /* Behind the navbar */
-    padding: 48px 0 0; /* Height of navbar */
+    z-index: 99; /* Behind the navbar */
+    padding: 4rem 0 0; /* Height of navbar */
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
   
 .sidebar-sticky {
     position: relative;
     top: 0;
-    height: calc(100vh - 48px);
-    padding-top: .5rem;
+    height: calc(100vh - 4rem);
+    padding: 1rem 0 0 2rem;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+
+    background-color: var(--akup-dark);
+    font-size: 1.25rem;
+}
+
+#mainContent {
+    margin-top: 4rem;
 }
