--- a/public/css/akup.css
+++ b/public/css/akup.css
@@ -38,7 +38,7 @@ hr {
     position: relative;
     top: 0;
     height: calc(100vh - 4rem);
-    padding: 1rem 0 0 2rem;
+    padding: 1rem 1rem 0;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 
