--- a/public/css/akup.css
+++ b/public/css/akup.css
@@ -19,8 +19,44 @@ hr {
     border-color: var(--akup-secondary);
 }
 
-#welcome #welcomeButtons {
-    padding: 0 250px;
+#particles-js canvas {
+    display: block;
+    vertical-align: bottom;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+    transition: opacity .8s ease, transform 1.4s ease
+}
+
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0
+}
+
+#welcome {
+    position: absolute;
+	top: 50%;
+	right: 50%;
+	transform: translate(50%,-50%);
+}
+
+#welcomeButtons {
+    padding: 0 300px;
+}
+
+#manajerButtons a {
+    width: 120px;
+}
+
+#akupLogo img {
+    width: 400px;
+    height: 400px;
 }
 
 .navbar {
