--- a/public/css/akup.css
+++ b/public/css/akup.css
@@ -1,3 +1,4 @@
+/***** Primary Style ******/
 :root {
     --akup-red: #A10D17;
     --akup-yellow: #EDB903;
@@ -17,46 +18,6 @@ hr {
 
 .card hr {
     border-color: var(--akup-secondary);
-}
-
-#particles-js canvas {
-    display: block;
-    vertical-align: bottom;
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-    opacity: 1;
-    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
-    transition: opacity .8s ease, transform 1.4s ease
-}
-
-#particles-js {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -10;
-    top: 0;
-    left: 0
-}
-
-#welcome {
-    position: absolute;
-	top: 50%;
-	right: 50%;
-	transform: translate(50%,-50%);
-}
-
-#welcomeButtons {
-    padding: 0 300px;
-}
-
-#manajerButtons a {
-    width: 120px;
-}
-
-#akupLogo img {
-    width: 400px;
-    height: 400px;
 }
 
 .navbar {
@@ -109,6 +70,53 @@ hr {
     margin-top: 4rem;
 }
 
+/***** Index (Welcome) Page *****/
+#particles-js canvas {
+    display: block;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+    transition: opacity .8s ease, transform 1.4s ease
+}
+
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0
+}
+
+#welcome {
+    position: absolute;
+	top: 50%;
+	right: 50%;
+	transform: translate(50%,-50%);
+}
+
+#welcomeButtons {
+    padding: 0 300px;
+}
+
+#manajerButtons a {
+    width: 120px;
+}
+
+#akupLogo img {
+    width: 400px;
+    height: 400px;
+}
+
+
+/***** Menu *****/
+.menu .menu-image {
+    object-fit: cover;
+    height: 150px;
+}
+
 .menu .menu-action-button {
     position: absolute;
 }
@@ -117,6 +125,7 @@ hr {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+/***** Transaksi *****/
 .menu-img {
     flex: 0 0 90px;
 }
